OLC2_Proyecto 1_201503958/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RNULO

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr finins
Rule 5     instruccion -> imprimir_ins finins
Rule 6     instruccion -> declaracion finins
Rule 7     instruccion -> if_instr finins
Rule 8     instruccion -> while_instr finins
Rule 9     instruccion -> for_instr finins
Rule 10    instruccion -> break_instr finins
Rule 11    instruccion -> continue_instr finins
Rule 12    instruccion -> funcion_instr finins
Rule 13    instruccion -> return_instr finins
Rule 14    instruccion -> llamada_instr finins
Rule 15    finins -> PUNTOCOMA
Rule 16    instruccion -> error PUNTOCOMA
Rule 17    imprimir_instr -> RPRINTLN PARA contenidos_print PARC
Rule 18    imprimir_ins -> RPRINT PARA contenidos_print PARC
Rule 19    contenidos_print -> contenidos_print COMA valores_print
Rule 20    contenidos_print -> valores_print
Rule 21    valores_print -> expresion
Rule 22    declaracion -> declaracion_instr_completa
Rule 23    declaracion -> declaracion_instr_simple
Rule 24    declaracion -> decla_arr
Rule 25    declaracion -> acces
Rule 26    declaracion_instr_simple -> ID IGUAL expresion
Rule 27    declaracion_instr_completa -> ID IGUAL expresion DOBLEDPUNTOS tipo
Rule 28    if_instr -> RIF expresion instrucciones REND
Rule 29    if_instr -> RIF expresion instrucciones RELSE instrucciones REND
Rule 30    if_instr -> RIF expresion instrucciones elseif_instr RELSE instrucciones REND
Rule 31    if_instr -> RIF expresion instrucciones elseif_instr REND
Rule 32    elseif_instr -> elseif_instr elseif_instruction
Rule 33    elseif_instr -> elseif_instruction
Rule 34    elseif_instruction -> RELSEIF expresion instrucciones
Rule 35    while_instr -> RWHILE expresion instrucciones REND
Rule 36    for_instr -> RFOR ID RIN expresion DOSPUNTOS expresion instrucciones REND
Rule 37    for_instr -> RFOR ID RIN expresion instrucciones REND
Rule 38    break_instr -> RBREAK
Rule 39    continue_instr -> RCONTINUE
Rule 40    funcion_instr -> RFUNCTION ID PARA parametros PARC instrucciones REND
Rule 41    funcion_instr -> RFUNCTION ID PARA PARC instrucciones REND
Rule 42    parametros -> parametros COMA parametro
Rule 43    parametros -> parametro
Rule 44    parametro -> ID DOBLEDPUNTOS tipo
Rule 45    return_instr -> RRETURN expresion
Rule 46    llamada_instr -> ID PARA PARC
Rule 47    llamada_instr -> ID PARA parametros_llamada PARC
Rule 48    parametros_llamada -> parametros_llamada COMA parametro_llamada
Rule 49    parametros_llamada -> parametro_llamada
Rule 50    parametro_llamada -> expresion
Rule 51    declaracion -> RGLOBAL ID IGUAL expresion
Rule 52    declaracion -> RGLOBAL ID
Rule 53    declaracion -> RLOCAL ID IGUAL expresion
Rule 54    declaracion -> RLOCAL ID
Rule 55    decla_arr -> ID IGUAL element
Rule 56    element -> element CORA elementos CORC
Rule 57    element -> CORA elementos CORC
Rule 58    elementos -> elementos COMA elementos2
Rule 59    elementos -> elementos2
Rule 60    elementos2 -> expresion
Rule 61    expresion -> CORA elementos CORC
Rule 62    acces -> ID corchetes IGUAL expresion
Rule 63    corchetes -> corchetes CORA expre CORC
Rule 64    corchetes -> CORA expre CORC
Rule 65    expre -> expresion
Rule 66    expresion -> ID recurs
Rule 67    recurs -> recurs CORA unico CORC
Rule 68    recurs -> CORA unico CORC
Rule 69    unico -> expresion
Rule 70    tipo -> RINT
Rule 71    tipo -> RDOUBLE
Rule 72    tipo -> RCHAR
Rule 73    tipo -> RSTRING
Rule 74    tipo -> RBOOLEAN
Rule 75    tipo -> RARRAY
Rule 76    expresion -> expresion MAS expresion
Rule 77    expresion -> expresion MENOS expresion
Rule 78    expresion -> expresion POR expresion
Rule 79    expresion -> expresion DIV expresion
Rule 80    expresion -> expresion POT expresion
Rule 81    expresion -> expresion MOD expresion
Rule 82    expresion -> expresion MENORQUE expresion
Rule 83    expresion -> expresion MAYORQUE expresion
Rule 84    expresion -> expresion MENORIGUAL expresion
Rule 85    expresion -> expresion MAYORIGUAL expresion
Rule 86    expresion -> expresion IGUALIGUAL expresion
Rule 87    expresion -> expresion DIFERENTE expresion
Rule 88    expresion -> expresion OR expresion
Rule 89    expresion -> expresion AND expresion
Rule 90    expresion -> MENOS expresion
Rule 91    expresion -> NOT expresion
Rule 92    expresion -> PARA expresion PARC
Rule 93    expresion -> llamada_instr
Rule 94    expresion -> ID
Rule 95    expresion -> ENTERO
Rule 96    expresion -> DECIMAL
Rule 97    expresion -> CADENA
Rule 98    expresion -> CARACTER
Rule 99    expresion -> RTRUE
Rule 100   expresion -> RFALSE
Rule 101   expresion -> RPARSE PARA tipo COMA expresion PARC
Rule 102   expresion -> RTRUNCATE PARA RINT COMA expresion PARC
Rule 103   expresion -> RLOG PARA expresion COMA expresion PARC
Rule 104   expresion -> RLENGTH PARA ID PARC

Terminals, with rules where they appear

AND                  : 89
CADENA               : 97
CARACTER             : 98
COMA                 : 19 42 48 58 101 102 103
CORA                 : 56 57 61 63 64 67 68
CORC                 : 56 57 61 63 64 67 68
DECIMAL              : 96
DIFERENTE            : 87
DIV                  : 79
DOBLEDPUNTOS         : 27 44
DOSPUNTOS            : 36
ENTERO               : 95
ID                   : 26 27 36 37 40 41 44 46 47 51 52 53 54 55 62 66 94 104
IGUAL                : 26 27 51 53 55 62
IGUALIGUAL           : 86
MAS                  : 76
MAYORIGUAL           : 85
MAYORQUE             : 83
MENORIGUAL           : 84
MENORQUE             : 82
MENOS                : 77 90
MOD                  : 81
NOT                  : 91
OR                   : 88
PARA                 : 17 18 40 41 46 47 92 101 102 103 104
PARC                 : 17 18 40 41 46 47 92 101 102 103 104
POR                  : 78
POT                  : 80
PUNTOCOMA            : 15 16
RARRAY               : 75
RBOOLEAN             : 74
RBREAK               : 38
RCHAR                : 72
RCONTINUE            : 39
RDOUBLE              : 71
RELSE                : 29 30
RELSEIF              : 34
REND                 : 28 29 30 31 35 36 37 40 41
RFALSE               : 100
RFOR                 : 36 37
RFUNCTION            : 40 41
RGLOBAL              : 51 52
RIF                  : 28 29 30 31
RIN                  : 36 37
RINT                 : 70 102
RLENGTH              : 104
RLOCAL               : 53 54
RLOG                 : 103
RNULO                : 
RPARSE               : 101
RPRINT               : 18
RPRINTLN             : 17
RRETURN              : 45
RSTRING              : 73
RTRUE                : 99
RTRUNCATE            : 102
RWHILE               : 35
error                : 16

Nonterminals, with rules where they appear

acces                : 25
break_instr          : 10
contenidos_print     : 17 18 19
continue_instr       : 11
corchetes            : 62 63
decla_arr            : 24
declaracion          : 6
declaracion_instr_completa : 22
declaracion_instr_simple : 23
element              : 55 56
elementos            : 56 57 58 61
elementos2           : 58 59
elseif_instr         : 30 31 32
elseif_instruction   : 32 33
expre                : 63 64
expresion            : 21 26 27 28 29 30 31 34 35 36 36 37 45 50 51 53 60 62 65 69 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 91 92 101 102 103 103
finins               : 4 5 6 7 8 9 10 11 12 13 14
for_instr            : 9
funcion_instr        : 12
if_instr             : 7
imprimir_ins         : 5
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 28 29 29 30 30 31 34 35 36 37 40 41
llamada_instr        : 14 93
parametro            : 42 43
parametro_llamada    : 48 49
parametros           : 40 42
parametros_llamada   : 47 48
recurs               : 66 67
return_instr         : 13
tipo                 : 27 44 101
unico                : 67 68
valores_print        : 19 20
while_instr          : 8

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . imprimir_ins finins
    (6) instruccion -> . declaracion finins
    (7) instruccion -> . if_instr finins
    (8) instruccion -> . while_instr finins
    (9) instruccion -> . for_instr finins
    (10) instruccion -> . break_instr finins
    (11) instruccion -> . continue_instr finins
    (12) instruccion -> . funcion_instr finins
    (13) instruccion -> . return_instr finins
    (14) instruccion -> . llamada_instr finins
    (16) instruccion -> . error PUNTOCOMA
    (17) imprimir_instr -> . RPRINTLN PARA contenidos_print PARC
    (18) imprimir_ins -> . RPRINT PARA contenidos_print PARC
    (22) declaracion -> . declaracion_instr_completa
    (23) declaracion -> . declaracion_instr_simple
    (24) declaracion -> . decla_arr
    (25) declaracion -> . acces
    (51) declaracion -> . RGLOBAL ID IGUAL expresion
    (52) declaracion -> . RGLOBAL ID
    (53) declaracion -> . RLOCAL ID IGUAL expresion
    (54) declaracion -> . RLOCAL ID
    (28) if_instr -> . RIF expresion instrucciones REND
    (29) if_instr -> . RIF expresion instrucciones RELSE instrucciones REND
    (30) if_instr -> . RIF expresion instrucciones elseif_instr RELSE instrucciones REND
    (31) if_instr -> . RIF expresion instrucciones elseif_instr REND
    (35) while_instr -> . RWHILE expresion instrucciones REND
    (36) for_instr -> . RFOR ID RIN expresion DOSPUNTOS expresion instrucciones REND
    (37) for_instr -> . RFOR ID RIN expresion instrucciones REND
    (38) break_instr -> . RBREAK
    (39) continue_instr -> . RCONTINUE
    (40) funcion_instr -> . RFUNCTION ID PARA parametros PARC instrucciones REND
    (41) funcion_instr -> . RFUNCTION ID PARA PARC instrucciones REND
    (45) return_instr -> . RRETURN expresion
    (46) llamada_instr -> . ID PARA PARC
    (47) llamada_instr -> . ID PARA parametros_llamada PARC
    (27) declaracion_instr_completa -> . ID IGUAL expresion DOBLEDPUNTOS tipo
    (26) declaracion_instr_simple -> . ID IGUAL expresion
    (55) decla_arr -> . ID IGUAL element
    (62) acces -> . ID corchetes IGUAL expresion

    error           shift and go to state 15
    RPRINTLN        shift and go to state 16
    RPRINT          shift and go to state 17
    RGLOBAL         shift and go to state 22
    RLOCAL          shift and go to state 24
    RIF             shift and go to state 25
    RWHILE          shift and go to state 26
    RFOR            shift and go to state 27
    RBREAK          shift and go to state 28
    RCONTINUE       shift and go to state 29
    RFUNCTION       shift and go to state 30
    RRETURN         shift and go to state 31
    ID              shift and go to state 23

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    imprimir_ins                   shift and go to state 5
    declaracion                    shift and go to state 6
    if_instr                       shift and go to state 7
    while_instr                    shift and go to state 8
    for_instr                      shift and go to state 9
    break_instr                    shift and go to state 10
    continue_instr                 shift and go to state 11
    funcion_instr                  shift and go to state 12
    return_instr                   shift and go to state 13
    llamada_instr                  shift and go to state 14
    declaracion_instr_completa     shift and go to state 18
    declaracion_instr_simple       shift and go to state 19
    decla_arr                      shift and go to state 20
    acces                          shift and go to state 21

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . imprimir_ins finins
    (6) instruccion -> . declaracion finins
    (7) instruccion -> . if_instr finins
    (8) instruccion -> . while_instr finins
    (9) instruccion -> . for_instr finins
    (10) instruccion -> . break_instr finins
    (11) instruccion -> . continue_instr finins
    (12) instruccion -> . funcion_instr finins
    (13) instruccion -> . return_instr finins
    (14) instruccion -> . llamada_instr finins
    (16) instruccion -> . error PUNTOCOMA
    (17) imprimir_instr -> . RPRINTLN PARA contenidos_print PARC
    (18) imprimir_ins -> . RPRINT PARA contenidos_print PARC
    (22) declaracion -> . declaracion_instr_completa
    (23) declaracion -> . declaracion_instr_simple
    (24) declaracion -> . decla_arr
    (25) declaracion -> . acces
    (51) declaracion -> . RGLOBAL ID IGUAL expresion
    (52) declaracion -> . RGLOBAL ID
    (53) declaracion -> . RLOCAL ID IGUAL expresion
    (54) declaracion -> . RLOCAL ID
    (28) if_instr -> . RIF expresion instrucciones REND
    (29) if_instr -> . RIF expresion instrucciones RELSE instrucciones REND
    (30) if_instr -> . RIF expresion instrucciones elseif_instr RELSE instrucciones REND
    (31) if_instr -> . RIF expresion instrucciones elseif_instr REND
    (35) while_instr -> . RWHILE expresion instrucciones REND
    (36) for_instr -> . RFOR ID RIN expresion DOSPUNTOS expresion instrucciones REND
    (37) for_instr -> . RFOR ID RIN expresion instrucciones REND
    (38) break_instr -> . RBREAK
    (39) continue_instr -> . RCONTINUE
    (40) funcion_instr -> . RFUNCTION ID PARA parametros PARC instrucciones REND
    (41) funcion_instr -> . RFUNCTION ID PARA PARC instrucciones REND
    (45) return_instr -> . RRETURN expresion
    (46) llamada_instr -> . ID PARA PARC
    (47) llamada_instr -> . ID PARA parametros_llamada PARC
    (27) declaracion_instr_completa -> . ID IGUAL expresion DOBLEDPUNTOS tipo
    (26) declaracion_instr_simple -> . ID IGUAL expresion
    (55) decla_arr -> . ID IGUAL element
    (62) acces -> . ID corchetes IGUAL expresion

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 15
    RPRINTLN        shift and go to state 16
    RPRINT          shift and go to state 17
    RGLOBAL         shift and go to state 22
    RLOCAL          shift and go to state 24
    RIF             shift and go to state 25
    RWHILE          shift and go to state 26
    RFOR            shift and go to state 27
    RBREAK          shift and go to state 28
    RCONTINUE       shift and go to state 29
    RFUNCTION       shift and go to state 30
    RRETURN         shift and go to state 31
    ID              shift and go to state 23

    instruccion                    shift and go to state 32
    imprimir_instr                 shift and go to state 4
    imprimir_ins                   shift and go to state 5
    declaracion                    shift and go to state 6
    if_instr                       shift and go to state 7
    while_instr                    shift and go to state 8
    for_instr                      shift and go to state 9
    break_instr                    shift and go to state 10
    continue_instr                 shift and go to state 11
    funcion_instr                  shift and go to state 12
    return_instr                   shift and go to state 13
    llamada_instr                  shift and go to state 14
    declaracion_instr_completa     shift and go to state 18
    declaracion_instr_simple       shift and go to state 19
    decla_arr                      shift and go to state 20
    acces                          shift and go to state 21

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    RPRINTLN        reduce using rule 3 (instrucciones -> instruccion .)
    RPRINT          reduce using rule 3 (instrucciones -> instruccion .)
    RGLOBAL         reduce using rule 3 (instrucciones -> instruccion .)
    RLOCAL          reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    RCONTINUE       reduce using rule 3 (instrucciones -> instruccion .)
    RFUNCTION       reduce using rule 3 (instrucciones -> instruccion .)
    RRETURN         reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    REND            reduce using rule 3 (instrucciones -> instruccion .)
    RELSE           reduce using rule 3 (instrucciones -> instruccion .)
    RELSEIF         reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 34

    finins                         shift and go to state 33

state 5

    (5) instruccion -> imprimir_ins . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 34

    finins                         shift and go to state 35

state 6

    (6) instruccion -> declaracion . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 34

    finins                         shift and go to state 36

state 7

    (7) instruccion -> if_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 34

    finins                         shift and go to state 37

state 8

    (8) instruccion -> while_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 34

    finins                         shift and go to state 38

state 9

    (9) instruccion -> for_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 34

    finins                         shift and go to state 39

state 10

    (10) instruccion -> break_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 34

    finins                         shift and go to state 40

state 11

    (11) instruccion -> continue_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 34

    finins                         shift and go to state 41

state 12

    (12) instruccion -> funcion_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 34

    finins                         shift and go to state 42

state 13

    (13) instruccion -> return_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 34

    finins                         shift and go to state 43

state 14

    (14) instruccion -> llamada_instr . finins
    (15) finins -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 34

    finins                         shift and go to state 44

state 15

    (16) instruccion -> error . PUNTOCOMA

    PUNTOCOMA       shift and go to state 45


state 16

    (17) imprimir_instr -> RPRINTLN . PARA contenidos_print PARC

    PARA            shift and go to state 46


state 17

    (18) imprimir_ins -> RPRINT . PARA contenidos_print PARC

    PARA            shift and go to state 47


state 18

    (22) declaracion -> declaracion_instr_completa .

    PUNTOCOMA       reduce using rule 22 (declaracion -> declaracion_instr_completa .)


state 19

    (23) declaracion -> declaracion_instr_simple .

    PUNTOCOMA       reduce using rule 23 (declaracion -> declaracion_instr_simple .)


state 20

    (24) declaracion -> decla_arr .

    PUNTOCOMA       reduce using rule 24 (declaracion -> decla_arr .)


state 21

    (25) declaracion -> acces .

    PUNTOCOMA       reduce using rule 25 (declaracion -> acces .)


state 22

    (51) declaracion -> RGLOBAL . ID IGUAL expresion
    (52) declaracion -> RGLOBAL . ID

    ID              shift and go to state 48


state 23

    (46) llamada_instr -> ID . PARA PARC
    (47) llamada_instr -> ID . PARA parametros_llamada PARC
    (27) declaracion_instr_completa -> ID . IGUAL expresion DOBLEDPUNTOS tipo
    (26) declaracion_instr_simple -> ID . IGUAL expresion
    (55) decla_arr -> ID . IGUAL element
    (62) acces -> ID . corchetes IGUAL expresion
    (63) corchetes -> . corchetes CORA expre CORC
    (64) corchetes -> . CORA expre CORC

    PARA            shift and go to state 49
    IGUAL           shift and go to state 50
    CORA            shift and go to state 52

    corchetes                      shift and go to state 51

state 24

    (53) declaracion -> RLOCAL . ID IGUAL expresion
    (54) declaracion -> RLOCAL . ID

    ID              shift and go to state 53


state 25

    (28) if_instr -> RIF . expresion instrucciones REND
    (29) if_instr -> RIF . expresion instrucciones RELSE instrucciones REND
    (30) if_instr -> RIF . expresion instrucciones elseif_instr RELSE instrucciones REND
    (31) if_instr -> RIF . expresion instrucciones elseif_instr REND
    (61) expresion -> . CORA elementos CORC
    (66) expresion -> . ID recurs
    (76) expresion -> . expresion MAS expresion
    (77) expresion -> . expresion MENOS expresion
    (78) expresion -> . expresion POR expresion
    (79) expresion -> . expresion DIV expresion
    (80) expresion -> . expresion POT expresion
    (81) expresion -> . expresion MOD expresion
    (82) expresion -> . expresion MENORQUE expresion
    (83) expresion -> . expresion MAYORQUE expresion
    (84) expresion -> . expresion MENORIGUAL expresion
    (85) expresion -> . expresion MAYORIGUAL expresion
    (86) expresion -> . expresion IGUALIGUAL expresion
    (87) expresion -> . expresion DIFERENTE expresion
    (88) expresion -> . expresion OR expresion
    (89) expresion -> . expresion AND expresion
    (90) expresion -> . MENOS expresion
    (91) expresion -> . NOT expresion
    (92) expresion -> . PARA expresion PARC
    (93) expresion -> . llamada_instr
    (94) expresion -> . ID
    (95) expresion -> . ENTERO
    (96) expresion -> . DECIMAL
    (97) expresion -> . CADENA
    (98) expresion -> . CARACTER
    (99) expresion -> . RTRUE
    (100) expresion -> . RFALSE
    (101) expresion -> . RPARSE PARA tipo COMA expresion PARC
    (102) expresion -> . RTRUNCATE PARA RINT COMA expresion PARC
    (103) expresion -> . RLOG PARA expresion COMA expresion PARC
    (104) expresion -> . RLENGTH PARA ID PARC
    (46) llamada_instr -> . ID PARA PARC
    (47) llamada_instr -> . ID PARA parametros_llamada PARC

    CORA            shift and go to state 55
    ID              shift and go to state 56
    MENOS           shift and go to state 57
    NOT             shift and go to state 58
    PARA            shift and go to state 59
    ENTERO          shift and go to state 61
    DECIMAL         shift and go to state 62
    CADENA          shift and go to state 63
    CARACTER        shift and go to state 64
    RTRUE           shift and go to state 65
    RFALSE          shift and go to state 66
    RPARSE          shift and go to state 67
    RTRUNCATE       shift and go to state 68
    RLOG            shift and go to state 69
    RLENGTH         shift and go to state 70

    expresion                      shift and go to state 54
    llamada_instr                  shift and go to state 60

state 26

    (35) while_instr -> RWHILE . expresion instrucciones REND
    (61) expresion -> . CORA elementos CORC
    (66) expresion -> . ID recurs
    (76) expresion -> . expresion MAS expresion
    (77) expresion -> . expresion MENOS expresion
    (78) expresion -> . expresion POR expresion
    (79) expresion -> . expresion DIV expresion
    (80) expresion -> . expresion POT expresion
    (81) expresion -> . expresion MOD expresion
    (82) expresion -> . expresion MENORQUE expresion
    (83) expresion -> . expresion MAYORQUE expresion
    (84) expresion -> . expresion MENORIGUAL expresion
    (85) expresion -> . expresion MAYORIGUAL expresion
    (86) expresion -> . expresion IGUALIGUAL expresion
    (87) expresion -> . expresion DIFERENTE expresion
    (88) expresion -> . expresion OR expresion
    (89) expresion -> . expresion AND expresion
    (90) expresion -> . MENOS expresion
    (91) expresion -> . NOT expresion
    (92) expresion -> . PARA expresion PARC
    (93) expresion -> . llamada_instr
    (94) expresion -> . ID
    (95) expresion -> . ENTERO
    (96) expresion -> . DECIMAL
    (97) expresion -> . CADENA
    (98) expresion -> . CARACTER
    (99) expresion -> . RTRUE
    (100) expresion -> . RFALSE
    (101) expresion -> . RPARSE PARA tipo COMA expresion PARC
    (102) expresion -> . RTRUNCATE PARA RINT COMA expresion PARC
    (103) expresion -> . RLOG PARA expresion COMA expresion PARC
    (104) expresion -> . RLENGTH PARA ID PARC
    (46) llamada_instr -> . ID PARA PARC
    (47) llamada_instr -> . ID PARA parametros_llamada PARC

    CORA            shift and go to state 55
    ID              shift and go to state 56
    MENOS           shift and go to state 57
    NOT             shift and go to state 58
    PARA            shift and go to state 59
    ENTERO          shift and go to state 61
    DECIMAL         shift and go to state 62
    CADENA          shift and go to state 63
    CARACTER        shift and go to state 64
    RTRUE           shift and go to state 65
    RFALSE          shift and go to state 66
    RPARSE          shift and go to state 67
    RTRUNCATE       shift and go to state 68
    RLOG            shift and go to state 69
    RLENGTH         shift and go to state 70

    expresion                      shift and go to state 71
    llamada_instr                  shift and go to state 60

state 27

    (36) for_instr -> RFOR . ID RIN expresion DOSPUNTOS expresion instrucciones REND
    (37) for_instr -> RFOR . ID RIN expresion instrucciones REND

    ID              shift and go to state 72


state 28

    (38) break_instr -> RBREAK .

    PUNTOCOMA       reduce using rule 38 (break_instr -> RBREAK .)


state 29

    (39) continue_instr -> RCONTINUE .

    PUNTOCOMA       reduce using rule 39 (continue_instr -> RCONTINUE .)


state 30

    (40) funcion_instr -> RFUNCTION . ID PARA parametros PARC instrucciones REND
    (41) funcion_instr -> RFUNCTION . ID PARA PARC instrucciones REND

    ID              shift and go to state 73


state 31

    (45) return_instr -> RRETURN . expresion
    (61) expresion -> . CORA elementos CORC
    (66) expresion -> . ID recurs
    (76) expresion -> . expresion MAS expresion
    (77) expresion -> . expresion MENOS expresion
    (78) expresion -> . expresion POR expresion
    (79) expresion -> . expresion DIV expresion
    (80) expresion -> . expresion POT expresion
    (81) expresion -> . expresion MOD expresion
    (82) expresion -> . expresion MENORQUE expresion
    (83) expresion -> . expresion MAYORQUE expresion
    (84) expresion -> . expresion MENORIGUAL expresion
    (85) expresion -> . expresion MAYORIGUAL expresion
    (86) expresion -> . expresion IGUALIGUAL expresion
    (87) expresion -> . expresion DIFERENTE expresion
    (88) expresion -> . expresion OR expresion
    (89) expresion -> . expresion AND expresion
    (90) expresion -> . MENOS expresion
    (91) expresion -> . NOT expresion
    (92) expresion -> . PARA expresion PARC
    (93) expresion -> . llamada_instr
    (94) expresion -> . ID
    (95) expresion -> . ENTERO
    (96) expresion -> . DECIMAL
    (97) expresion -> . CADENA
    (98) expresion -> . CARACTER
    (99) expresion -> . RTRUE
    (100) expresion -> . RFALSE
    (101) expresion -> . RPARSE PARA tipo COMA expresion PARC
    (102) expresion -> . RTRUNCATE PARA RINT COMA expresion PARC
    (103) expresion -> . RLOG PARA expresion COMA expresion PARC
    (104) expresion -> . RLENGTH PARA ID PARC
    (46) llamada_instr -> . ID PARA PARC
    (47) llamada_instr -> . ID PARA parametros_llamada PARC

    CORA            shift and go to state 55
    ID              shift and go to state 56
    MENOS           shift and go to state 57
    NOT             shift and go to state 58
    PARA            shift and go to state 59
    ENTERO          shift and go to state 61
    DECIMAL         shift and go to state 62
    CADENA          shift and go to state 63
    CARACTER        shift and go to state 64
    RTRUE           shift and go to state 65
    RFALSE          shift and go to state 66
    RPARSE          shift and go to state 67
    RTRUNCATE       shift and go to state 68
    RLOG            shift and go to state 69
    RLENGTH         shift and go to state 70

    expresion                      shift and go to state 74
    llamada_instr                  shift and go to state 60

state 32

    (2) instrucciones -> instrucciones instruccion .

    error           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RPRINTLN        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RPRINT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RGLOBAL         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RLOCAL          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RIF             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RWHILE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RFOR            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RBREAK          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RCONTINUE       reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RFUNCTION       reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RRETURN         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    REND            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RELSE           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RELSEIF         reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 33

    (4) instruccion -> imprimir_instr finins .

    error           reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RPRINTLN        reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RPRINT          reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RGLOBAL         reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RLOCAL          reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RIF             reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RWHILE          reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RFOR            reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RBREAK          reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RCONTINUE       reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RFUNCTION       reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RRETURN         reduce using rule 4 (instruccion -> imprimir_instr finins .)
    ID              reduce using rule 4 (instruccion -> imprimir_instr finins .)
    $end            reduce using rule 4 (instruccion -> imprimir_instr finins .)
    REND            reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RELSE           reduce using rule 4 (instruccion -> imprimir_instr finins .)
    RELSEIF         reduce using rule 4 (instruccion -> imprimir_instr finins .)


state 34

    (15) finins -> PUNTOCOMA .

    error           reduce using rule 15 (finins -> PUNTOCOMA .)
    RPRINTLN        reduce using rule 15 (finins -> PUNTOCOMA .)
    RPRINT          reduce using rule 15 (finins -> PUNTOCOMA .)
    RGLOBAL         reduce using rule 15 (finins -> PUNTOCOMA .)
    RLOCAL          reduce using rule 15 (finins -> PUNTOCOMA .)
    RIF             reduce using rule 15 (finins -> PUNTOCOMA .)
    RWHILE          reduce using rule 15 (finins -> PUNTOCOMA .)
    RFOR            reduce using rule 15 (finins -> PUNTOCOMA .)
    RBREAK          reduce using rule 15 (finins -> PUNTOCOMA .)
    RCONTINUE       reduce using rule 15 (finins -> PUNTOCOMA .)
    RFUNCTION       reduce using rule 15 (finins -> PUNTOCOMA .)
    RRETURN         reduce using rule 15 (finins -> PUNTOCOMA .)
    ID              reduce using rule 15 (finins -> PUNTOCOMA .)
    $end            reduce using rule 15 (finins -> PUNTOCOMA .)
    REND            reduce using rule 15 (finins -> PUNTOCOMA .)
    RELSE           reduce using rule 15 (finins -> PUNTOCOMA .)
    RELSEIF         reduce using rule 15 (finins -> PUNTOCOMA .)


state 35

    (5) instruccion -> imprimir_ins finins .
